Refactor CSS styles for search results table and add Glide.js library

--- a/src/partials/faqs/faq_3.html
+++ b/src/partials/faqs/faq_3.html
@@ -1,157 +1,119 @@
 <li data-tab="{{data}}" class=" as__g_faqs_ls as__g_faqs_tcon_list_int {{cls}}">
-  <h3>Sobre certificados y documentos</h3>
- 
-
-  
+  <h3>Servicios portal transaccional</h3>
   <ol class="fqs">
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          ¿Qué servicios o solicitudes puedo realizar a través del Portal
+          transaccional?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            Nuestro Portal Transaccional es un espacio creado especialmente para
+            ti como parte de la familia ASULADO. Aquí podrás:
+          </p>
+          <ul>
+            <li>
+              Mantener tus datos básicos actualizados e informarnos cuando
+              alguno de estos cambie.
+            </li>
+            <li>
+              Consultar tus certificados, colillas de pago e información sobre
+              tu póliza.
+            </li>
 
-    <li class="fqs_list">
-      
-      <div class="fqs_list_int">
-        <h4>
-          ¿Cómo obtengo el certificado de ingresos y retenciones para la
-          declaración de renta?
-        </h4>
-        <div class="fqs_info">
-          <p>
-            ASULADO Seguros de Vida te envía, al correo registrado en nuestro
-            sistema, este documento de manera anticipada en el primer trimestre
-            del año. Si no lo recibiste, puedes solicitarlo de dos maneras:
-          </p>
-          <ul>
-            <li>Haz clic en el botón de Lusa nuestra asistente virtual en la página web para obtener
-              asistencia personalizada.
-              </li>
-              <li>Usa el botón de WhatsApp para hablar con nosotros o escríbenos directamente al
-                (+57) 315 511 4150.
-                </li>
-           
             <li>
-              También puedes comunicarte a nuestra línea de atención a nivel
-              nacional 018000 412 854 y en Medellín al (604) 4026876, donde te
-              brindaremos asesoría y respuesta a tu solicitud.
+              Registrar novedades como EPS, Caja de Compensación, Cuenta
+              Financiera, Aportes Voluntarios, redistribución de mesada y
+              conocer la fecha límite del registro.
             </li>
-          
+            <li>
+              Enviar documentos como: certificado de estudio, certificado de
+              supervivencia, poderes especiales, entre otros.
+            </li>
+            <li>
+              Crear y/o consultar tus solicitudes (PQRS) con el número del
+              radicado.
+            </li>
+            <li>
+              Conocer la fecha de tu próximo pago de la mesada pensional a
+              través del calendario de pagos.
+            </li>
+            <li>
+              Acceder a artículos de intereses sobre los servicios que
+              ofrecemos.
+            </li>
+            <li>
+              Conectarte con todos nuestros canales de atención y redes
+              sociales.
+            </li>
           </ul>
         </div>
       </div>
     </li>
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Cómo puedo obtener un certificado o colilla de pago?</h4>
+        <h4>¿Cómo puedo obtener mis colillas de pago?</h4>
         <div class="fqs_info">
-          <p>Existen dos formas para hacer la solicitud:</p>
-          <ul>
-            <li>Haz clic en el botón de Lusa nuestra asistente virtual en la página web para obtener asistencia personalizada.</li>
-            <li>Usa el botón de WhatsApp para hablar con nosotros o escríbenos directamente al (+57) 315 511 4150.</li>
-            
-            <li>
-              También puedes comunicarte a nuestras líneas de atención a nivel
-              nacional 018000 412 854 y en Medellín al (604) 4026876, donde te
-              brindaremos asesoría y respuesta a tu solicitud.
-            </li>
-           
-            
-            <!-- <li>Certificado de estudio</li>
-            <li>Certificado de cuenta bancaria</li>
-            <li>Documento de identidad actualizado</li>
-            <li>Certificado de la EPS donde te encuentras afiliado</li>
-            <li>Para hacer la entrega de esta documentaci&oacute;n, puedes:</li>
-            <li>
-              Ingresar a nuestra p&aacute;gina web, secci&oacute;n
-              &acute;Solicitudes o Peticiones&rsquo;, all&iacute;
-              radicar&aacute;s la solicitud y la respuesta te llegar&aacute; al
-              correo que tienes registrado en nuestra compa&ntilde;&iacute;a.
-              Haz tu solicitud haciendo clic aqu&iacute;
-            </li>
-            <li>
-              Comunicarte a nuestras l&iacute;neas de atenci&oacute;n a nivel
-              nacional 018000 412 854 y en Medell&iacute;n al (604) 4026876,
-              donde se validar&aacute; la identidad del solicitante y se
-              proceder&aacute; con la recepci&oacute;n de la
-              documentaci&oacute;n indicada para el ingreso de la solicitud.
-            </li> -->
-          </ul>
+          <p>
+            Es muy simple. En la sección principal del Portal Transaccional
+            llamada “Servicios a un clic” encuentras en el menú ubicado en la
+            parte izquierda tu pantalla la opción “Certificados y otros
+            documentos”, haz clic y en la opción “Colilla de pagos” selecciona
+            “Ver más” y escoge la opción que se adecúe a tu necesidad. Recuerda
+            que podrás descargar el documento o enviarlo a tu correo electrónico
+            registrado.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Puedo obtener mi certificado de pensionado?</h4>
+        <div class="fqs_info">
+          <p>
+            ¡Claro que sí! Visita la sección “Servicios a un clic” y en el menú
+            que encuentras en la parte izquierda de tu pantalla, accede a la
+            opción “Certificados y otros documentos” da clic allí y en la opción
+            “Certificado de Pensión” haz clic en “Ver más” y genera tu
+            certificado. Recuerda que podrás descargar el documento o enviarlo a
+            tu correo electrónico registrado.
+          </p>
         </div>
       </div>
     </li>
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
-          En caso de que mi familiar pensionado por invalidez fallezca, ¿qué
-          documentos debo aportar para mi pensión?
+          ¿Puedo obtener la copia de la póliza de mi Renta Vitalicia con
+          ASULADO?
         </h4>
         <div class="fqs_info">
           <p>
-            Conoce la documentación requerida para la sustitución pensional
-            según sea tu caso,
-            <a
-              href="/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf"
-              target="_blank"
-              class="underline text-azul-bold font-bold underline-offset-2"
-              >ingresando aquí</a
-            >. Adicional, recuerda diligenciar la solicitud de sustitución
-            pensional
-            <a
-              href="/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf"
-              target="_blank"
-              class="underline text-azul-bold font-bold underline-offset-2"
-              >descarga aquí</a
-            >.
+            ¡Por supuesto! Al ingresa al Portal Transaccional, en la sección
+            “Servicios a un clic”, en el menú que encuentras en la parte
+            izquierda de tu pantalla, accede a la opción “Certificados y otros
+            documentos” da clic allí y en la opción “Copia de póliza” haz clic
+            en “Ver más” y genera el documento. Recuerda que podrás descargar el
+            documento o enviarlo a tu correo electrónico registrado.
           </p>
-          <ul>
-            <li>Certificado de estudio</li>
-            <li>Certificado de cuenta bancaria</li>
-            <li>Documento de identidad actualizado</li>
-            <li>Certificado de la EPS donde te encuentras afiliado</li>
-            <li>Para hacer la entrega de esta documentaci&oacute;n, puedes:</li>
-            <li>
-              Ingresar a nuestra página web, sección
-              <a
-                href="/solicitudes"
-                title="Solicitudes"
-                class="underline text-azul-bold font-bold underline-offset-2"
-                >“Solicitudes”</a
-              >, allí radicarás la solicitud y la respuesta te llegará al correo
-              que tienes registrado en nuestra compañía.
-            </li>
-            <li>
-              Comunicarte a nuestras l&iacute;neas de atenci&oacute;n a nivel
-              nacional 018000 412 854 y en Medell&iacute;n al (604) 4026876,
-              donde se validar&aacute; la identidad del solicitante y se
-              proceder&aacute; con la recepci&oacute;n de la
-              documentaci&oacute;n indicada para el ingreso de la solicitud.
-            </li>
-            <!-- <li>
-              A través de nuestra página web, sección ´Solicitudes o
-              Peticiones’, diligencias tema: certificado o colilla; detalle:
-              colilla de pago del pensionado. La respuesta te llegará al correo
-              que tienes registrado en nuestra compañía. Haz clic aquí para
-              realizarlo.
-            </li>
-            <li>
-              También puedes comunicarte a nuestras líneas de atención a nivel
-              nacional 018000 412 854 y en Medellín al (604) 4026876, donde te
-              brindaremos asesoría y respuesta a tu solicitud.
-            </li> -->
-          </ul>
         </div>
       </div>
     </li>
-    <!-- <li class="fqs_list">
+    <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>
-          Si fallezco, ¿ASULADO Seguros de Vida cubriría los gastos fúnebres?
-        </h4>
+        <h4>¿Cómo puedo obtener el Certificado de Ingresos y Retenciones?</h4>
         <div class="fqs_info">
           <p>
-            Si eres pensionado por invalidez o sobrevivencia cuentas con un
-            auxilio funerario y en caso de fallecimiento del asegurado, quien
-            haya incurrido con los gastos funerarios podría recibir el valor
-            equivalente a la normativa colombiana.
+            Es muy fácil solicitarlo. Visita la sección “Servicios a un clic” y
+            en el menú que encuentras en la parte izquierda de tu pantalla,
+            accede a la opción “Certificados y otros documentos” da clic allí y
+            en la opción “Certificado de Ingresos y Retenciones” haz clic en
+            “Ver más” y solicita el documento. Recuerda que podrás descargar el
+            documento o enviarlo a tu correo electrónico registrado.
           </p>
         </div>
       </div>
-    </li> -->
+    </li>
   </ol>
 </li>
