--- a/src/partials/faqs/faq_4.html
+++ b/src/partials/faqs/faq_4.html
@@ -1,173 +1,17 @@
 <li data-tab="{{data}}" class=" as__g_faqs_ls as__g_faqs_tcon_list_int {{cls}}">
-  <h3>Mesada pensional</h3>
+  <h3>Solicitar y gestionar pqrs</h3>
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Cuándo sería el pago de mi pensión? ¿mensual o quincenal?</h4>
+        <h4>¿Cómo puedo ver mi historial de PQRS?</h4>
         <div class="fqs_info">
           <p>
-            El pago de tu mesada se realizará de forma mensual y se hará máximo
-            el último día hábil de cada mes. Conoce el calendario de pagos dando
-            clic <a class="font-bold text-azul-bright2 underline-offset-4 underline" href="/calendario_pagos" target="_blank">aquí</a>
+            Nuestrmayor interés es que puedas tener trazabilidad y autogestión
+            de tus solicitudes, así que para revisar tu historial de PQRS,
+            selecciona en el menú principal la opción “Solicitudes” y
+            lueg“Consultar una solicitud”. Allí podrás encontrar el historial de
+            las últimas 10 solicitudes creadas.
           </p>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Por qué pueden suspender mi mesada?</h4>
-        <div class="fqs_info">
-          <p>
-            Existen varias causas por las cuales tu mesada puede ser
-            suspendida:  
-          </p>
-          <ul>
-            <li>
-              Eres un pensionado que reside en el exterior y no has enviado tu
-              certificado de supervivencia, el cual es un requisito legal que
-              debes enviar a ASULADO Seguros de Vida cada 6 meses.
-            </li>
-            <li>
-              Eres un hijo sano (no inv&aacute;lido), beneficiario mayor de 18
-              a&ntilde;os y no acreditas la calidad de estudiante, es decir, no
-              has enviado tu certificado de estudio acreditando un n&uacute;mero
-              de horas que estudias a la semana igual o mayor a 20 horas, dicho
-              certificado lo debes enviar a ASULADO Seguros de Vida cada 6 meses
-              mientras te encuentres estudiando.
-            </li>
-            <li>
-              Por Ley, los hijos sanos (no inv&aacute;lidos) tienen derecho
-              hasta los 25 a&ntilde;os si acreditan la calidad de estudiante, al
-              cumplir esta edad, tu mesada ser&aacute; redistribuida a los otros
-              beneficiarios que se encuentren vigentes en la p&oacute;liza.
-            </li>
-            <li>
-              Eres un hijo beneficiario y cumpliste los 18 a&ntilde;os de edad y
-              no has enviado a ASULADO Seguros de Vida la documentaci&oacute;n
-              requerida originada por el cambio de documento: certificado de
-              estudio (explicado en el punto anterior), cuenta bancaria para que
-              recibas tu pago de pensi&oacute;n y la actualizaci&oacute;n del
-              tipo de documento ante la EPS.
-            </li>
-          </ul>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>
-          ¿Cuando me trasladaron de Protección a ASULADO Seguros de Vida,
-          ¿cambiaron las condiciones del pago de mi mesada?
-        </h4>
-        <div class="fqs_info">
-          <p>
-            No, el valor de la mesada sería el mismo que vienes recibiendo, se
-            paga en las mismas fechas, no existe suspensión por el cambio y cada
-            año se te incrementa el valor de la mesada según el IPC o si es el
-            caso con el SMMLV.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Cambiarán los porcentajes de mi pensión?</h4>
-        <div class="fqs_info">
-          <p>
-            Los porcentajes de distribución de la mesada pensional se realizan
-            por lo definido en la ley, así: el pensionado por invalidez recibirá
-            el 100% del valor de la mesada.
-          </p>
-        </div>
-      </div>
-    </li>
-
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Mi mesada pensional incrementa cada año?</h4>
-        <div class="fqs_info">
-          <p>
-            Si tu mesada pensional es superior al salario mínimo, se ajustará
-            conforme al incremento del porcentaje del IPC y si tu mesada es de
-            un salario mínimo se incrementa de acuerdo con lo decretado por el
-            Gobierno Nacional para este, según el Artículo 14 de la Ley 100 de
-            1993.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿A qué tipo de cuenta pueden realizar el pago de mi pensión?</h4>
-        <div class="fqs_info">
-          <p>
-            El pago de tu pensión lo puedes recibir en una cuenta de ahorros,
-            cuenta corriente o una cuenta tipo pensión, en esta última opción,
-            debes validar con el banco que se encuentre asociada al NIT de
-            ASULADO Seguros de Vida: 901.660.669 – 6 para que no se presenten
-            rechazos bancarios al realizar el pago.
-          </p>
-          <p>
-            Actualmente no está permitido el pago de la mesada pensional a
-            billeteras digitales.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Cuántas mesadas recibo al año?</h4>
-        <div class="fqs_info">
-          <p>
-            Según el acto Legislativo No. 1 de 2005 promulgado por el Congreso
-            de la República, si tienes derecho a la pensión y tu mesada
-            se originó después del 31 de julio de 2011, recibirás 13 mesadas
-            pensionales al año, una de ellas corresponde a la mesada adicional o
-            “prima” que, por políticas de ASULADO Seguros de Vida, se paga en el
-            mes noviembre.
-          </p>
-          <p>
-            Si el derecho a la pensión se originó antes del 31 de julio de 2011,
-            se tendrá derecho a recibir 14 mesadas al año, es decir, recibirás
-            una mesada adicional o “prima” en el mes de junio y otra en el mes
-            de noviembre.
-          </p>
-          <p>
-            Es importante precisar que, la pensión se causa u origina cuando se
-            cumplen todos los requisitos para acceder a ella, incluso cuando no
-            se haya iniciado el reconocimiento o pago de la pensión.  
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Cuáles son las deducciones que hacen de mi mesada pensional? </h4>
-        <div class="fqs_info">
-          <p>
-            Puedes obtener toda la información sobre las deducciones que se hacen a tu
-mesada pensional en tu colilla de pago, suscríbete al servicio automático del envío
-de colilla de esta manera:
-
-          </p>
-
-          <ul>
-            <li>
-              En el siguiente link de nuestra página web: <a class="underline text-azul-bold font-bold underline-offset-2" href="https://www.asulado.com/Suscribete" target="_blank"> www.asulado.com/Suscribete.</a>
-            </li>
-            <li>
-              Radicando una PQRS a través de nuestra página web en la sección
-              ´Solicitudes’. Diligencias tema: certificado o colilla. Detalle:
-              colilla de pago del pensionado.<br /><br />La respuesta te llegará
-              al correo que tienes registrado en nuestra compañía.
-            </li>
-            <!-- <li>
-              Seguros de Vida.com/Solicitudes_ASULADO Seguros de Vida) <br />También
-              puedes solicitarla comunicándote a nuestra línea de atención a
-              nivel nacional 018000 412 854 y en Medellín al (604) 4026876,
-              donde te brindaremos asesoría y respuesta a tu solicitud.
-            </li> -->
-          </ul>
         </div>
       </div>
     </li>
