--- a/src/partials/faqs/faq_6.html
+++ b/src/partials/faqs/faq_6.html
@@ -1,44 +1,77 @@
 <li data-tab="{{data}}" class="as__g_faqs_tcon_list_int as__g_faqs_ls {{cls}}">
-  <h3>Trámites entidades financieras</h3>
+  <h3>Deducciones de nómina</h3>
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>
-          Si cambio de medio de pago o cuenta bancaria ¿cómo lo notifico a
-          ASULADO Seguros de Vida?
-        </h4>
+        <h4>¿Cómo puedo registrar una redistribución de mesada?</h4>
         <div class="fqs_info">
           <p>
-            Para informarnos sobre la actualización de tus medios de pago o
-            cuenta bancaria, comunícate con nuestras líneas de atención a nivel
-            nacional 018000 412 854 y en Medellín al (604) 4026876, donde se
-            validará la identidad del solicitante, se pedirá el certificado
-            bancario y se procederá con la actualización de la información.
+            Después de iniciar sesión, en la sección principal llamada
+            “Servicios a un clic”, seleccionada la opción “Novedades de nómina”
+            ubicada en el menú izquierda de tu pantalla, haz clic en
+            “Redistribuciones de mesada”, después en ver más y adjunta el
+            formato de retribución.
           </p>
         </div>
       </div>
     </li>
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Puedo solicitar un crédito con ASULADO Seguros de Vida?</h4>
+        <h4>¿Cómo puedo registrar una novedad de EPS?</h4>
         <div class="fqs_info">
           <p>
-            Desde ASULADO Seguros de Vida no ofrecemos servicios de crédito o
-            libranza. Para realizar esta solicitud puedes contactarte con la
-            entidad financiera de tu elección, realizar el proceso e informar
-            cómo quieres incorporar las deducciones de tu crédito desde tu
-            mesada pensional.
+            o Para actualizar esta información, debes iniciar sesión y en la
+            sección principal llamada “Servicios a un clic”, haz clic en la
+            opción “Novedades de nómina” ubicada en el menú izquierda de tu
+            pantalla, haz clic en la opción “Novedades de EPS”, después en “Ver
+            más” y sigue las instrucciones según la necesidad
+            Afiliación/Traslado/Retiro de EPS. Recuerda tener el documento de la
+            novedad a la mano.
           </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Cómo puedo registrar una novedad de Caja de Compensación?</h4>
+        <div class="fqs_info">
           <p>
-            Debes tener presente que para aplicar el descuento en la mesada
-            pensional, la entidad debe estar registrada como operadora de
-            libranza en el Registro Único Nacional de Entidades Operadoras de
-            Libranza (RUNEOL).
+            Para hacer este registro, deberás iniciar sesión y en la sección
+            principal llamada “Servicios a un clic”, seleccionada la opción
+            “Novedades de nómina” ubicada en el menú izquierda de tu pantalla,
+            haz clic en la opción “Novedades de Caja de Compensación”, después
+            en “Ver más” y sigue las instrucciones según tu necesidad
+            Actualización/Traslado/Retiro. Recuerda tener el documento de la
+            novedad a la mano.
           </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Cómo puedo enviar mi certificado de estudio?</h4>
+        <div class="fqs_info">
           <p>
-            La entidad se encarga de enviar la información a ASULADO Seguros de
-            Vida y son quienes te dan respuesta sobre la aplicación o no de la
-            novedad en tu nómina.
+            Para realizar este envío de certificado, deberás iniciar sesión y en
+            la sección principal llamada “Servicios a un clic”, haz clic en la
+            opción “Novedades de nómina” ubicada en el menú izquierda de tu
+            pantalla, selecciona “Certificado de estudio”, después en “Ver más”
+            y sigue las instrucciones. Recuerda tener el documento de la novedad
+            a la mano.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Cómo puedo enviar mi certificado de supervivencia?</h4>
+        <div class="fqs_info">
+          <p>
+            Después de iniciar sesión, en la sección principal llamada
+            “Servicios a un clic”, seleccionada la opción “Novedades de nómina”
+            ubicada en el menú izquierda de tu pantalla, haz clic en la opción
+            “Certificado de supervivencia”, después en “Ver más” y sigue las
+            instrucciones. Recuerda tener el documento de la novedad a la mano.
           </p>
         </div>
       </div>
@@ -46,14 +79,62 @@
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
-          Si fallezco, ¿ASULADO Seguros de Vida cubriría los gastos fúnebres?
+          Si tengo cambios en mi cuenta financiera ¿Cómo puedo informar este
+          cambio?
         </h4>
         <div class="fqs_info">
           <p>
-            Si eres pensionado por invalidez cuentas con un
-            auxilio funerario y en caso de fallecimiento del asegurado, quien
-            haya incurrido con los gastos funerarios podría recibir el valor
-            equivalente a la normativa colombiana.
+            Para nosotros es fundamental tener tu información actualizada. Para
+            realizar este cambio de cuenta, después de iniciar sesión, en la
+            sección principal llamada “Servicios a un clic”, seleccionada la
+            opción “Novedades de nómina” ubicada en el menú izquierda de tu
+            pantalla, haz clic en la opción “Novedades de cuenta financiera”,
+            después en “Ver más” y sigue las instrucciones. Recuerda tener el
+            certificado de la cuenta financiera a la mano.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Cómo puedo informar una novedad en mi Pensión Voluntaria?</h4>
+        <div class="fqs_info">
+          <p>
+            o Si tienes una novedad por informarnos, en la sección principal
+            llamada “Servicios a un clic”, haz clic en la opción “Novedades de
+            nómina” ubicada en el menú izquierda de tu pantalla, haz clic en la
+            opción “Novedades pensión voluntaria”, después en “Ver más” y sigue
+            las instrucciones…
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Dónde puedo hacer seguimiento a la novedad que registré?</h4>
+        <div class="fqs_info">
+          <p>
+            Para hacer seguimiento a tus novedades, debes iniciar sesión y en la
+            sección principal llamada “Servicios a un clic”, seleccionada la
+            opción “Novedades de nómina” ubicada en el menú izquierda de tu
+            pantalla, haz clic en la opción “Consultar una novedad”, después en
+            “Ver más” podrás visualizar el tipo de novedad y el estado de esta.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>
+          ¿Qué debo tener presente antes de registrar cualquier información en
+          el Portal Transaccional?
+        </h4>
+        <div class="fqs_info">
+          <p>
+            Te recomendamos tener a la mano el teléfono móvil, el documento de
+            identidad y garantizar el acceso a internet y correo electrónico. Si
+            deseas registrar una novedad, no olvides enviarnos una copia del
+            documento.
           </p>
         </div>
       </div>
