--- a/src/partials/faqs/tabs.html
+++ b/src/partials/faqs/tabs.html
@@ -5,12 +5,13 @@
         <div class="as__doc_tabs_small">
           <label for="tabs">Selecciona el tema</label>
           <select id="docs_tabs">
-            <option value="0">Sobre ASULADO</option>
-            <option value="1">Pensión por invalidez o sobrevivencia</option>
-            <option value="2">Certificados y documentos</option>
-            <option value="3">Mesada pensional</option>
-            <option value="4">EPS y cajas de compensación</option>
-            <option value="5">Sobre temas financieros</option>
+            <option value="0">Cambio de contraseña</option>
+            <option value="1">Actualización datos personales</option>
+            <option value="2">Servicios portal transaccional</option>
+            <option value="3">Solicitar y gestionar PQRS</option>
+            <option value="4">Beneficiarios</option>
+            <option value="5">Deducciones de nómina</option>
+            <option value="6">Canales de atención</option>
           </select>
         </div>
         <ul class="as__doc_tabs">
@@ -21,8 +22,8 @@
               aria-current="page"
               class="tabs_link active"
             >
-              <i class="fa-solid fa-info"></i>
-              <b>Sobre ASULADO</b>
+              <i class="fa-solid fa-key"></i>
+              <b>Cambio de contraseña</b>
             </a>
           </li>
           <li class="w-full">
@@ -32,32 +33,38 @@
               aria-current="page"
               class="tabs_link"
             >
-              <i class="fa-solid fa-wheelchair"></i>
-              <b>Pensión por invalidez o sobrevivencia </b>
+              <i class="fa-solid fa-person"></i>
+              <b>Actualización datos personales</b>
             </a>
           </li>
           <li class="w-full">
             <a href="#faqs" data-tab="2" aria-current="page" class="tabs_link">
-              <i class="fa-sharp fa-light fa-file-invoice"></i>
-              <b>Certificados y documentos</b>
+              <i class="fa-sharp fa-light fa-pen-field"></i>
+              <b>Servicios portal transaccional</b>
             </a>
           </li>
           <li class="w-full">
             <a href="#faqs" data-tab="3" aria-current="page" class="tabs_link">
-              <i class="fa-solid fa-money-check"></i>
-              <b>Mesada pensional</b>
+              <i class="fa-solid fa-circle-info"></i>
+              <b>Solicitar y gestionar PQRS</b>
             </a>
           </li>
           <li class="w-full">
             <a href="#faqs" data-tab="4" aria-current="page" class="tabs_link">
-              <i class="fa-solid fa-house-medical"></i>
-              <b>EPS y cajas de compensación</b>
+              <i class="fa-solid fa-hand-holding-medical"></i>
+              <b>Beneficiarios</b>
             </a>
           </li>
           <li class="w-full">
             <a href="#faqs" data-tab="5" aria-current="page" class="tabs_link">
               <i class="fa-solid fa-dollar-sign"></i>
-              <b>Sobre temas financieros</b>
+              <b>Deducciones de nómina</b>
+            </a>
+          </li>
+          <li class="w-full">
+            <a href="#faqs" data-tab="6" aria-current="page" class="tabs_link">
+              <i class="fa-solid fa-phone-flip"></i>
+              <b>Canales de atención</b>
             </a>
           </li>
         </ul>
