--- a/src/partials/faqs/faq_1.html
+++ b/src/partials/faqs/faq_1.html
@@ -1,27 +1,26 @@
 <li data-tab="{{data}}" class="as__g_faqs_tcon_list_int as__g_faqs_ls {{cls}}">
-  <h3>Sobre ASULADO Seguros de Vida</h3>
+  <h3>Cambio de contraseña</h3>
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>¿Por qué nace una nueva compañía como ASULADO Seguros de Vida?</h4>
+        <h4>¿Cómo puedo cambiar mi contraseña?</h4>
         <div class="fqs_info">
           <p>
-            Somos ASULADO Seguros de Vida, una filial de SURA Asset Management.
-            Nacimos en diciembre de 2022 para consolidarnos como la compañía que
-            dinamiza el mercado asegurador en Colombia, donde complementamos la
-            oferta de aseguramiento para la etapa de retiro y desacumulación.
+            Al iniciar la sesión, haz clic en el ícono de tu perfil que aparece
+            en la parte superior derecha de tu pantalla, selecciona la opción
+            “Cambiar Contraseña” y sigue las instrucciones.
           </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>Olvidé mi contraseña ¿qué debo hacer?</h4>
+        <div class="fqs_info">
           <p>
-            Además de complementar el sistema pensional en Colombia, existimos
-            para ofrecer bienestar, tranquilidad, innovación y acompañamiento a
-            miles de colombianos, a través de la gestión de activos y
-            administración de productos de desacumulación patrimonial , como son
-            las soluciones de Rentas Vitalicias y Seguros Previsionales.
-          </p>
-          <p>
-            Miramos el futuro con optimismo, responsabilidad y sostenibilidad y
-            seremos tu aliado para transformar esfuerzos de vida en beneficios
-            garantizados que generan tranquilidad y libertad.
+            Si olvidaste tu contraseña, no te preocupes. En la página de inicio
+            del Portal Transaccional encontrarás un enlace para recuperarla.
+            Solo tienes que ingresar tu número de documento, el correo
           </p>
         </div>
       </div>
