--- a/src/partials/faqs/faq_5.html
+++ b/src/partials/faqs/faq_5.html
@@ -1,115 +1,44 @@
 <li data-tab="{{data}}" class="as__g_faqs_tcon_list_int as__g_faqs_ls {{cls}}">
-  <h3>Sobre EPS y cajas de compensación</h3>
+  <h3>Beneficiarios</h3>
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
+        <h4>¿Cómo puedo saber quiénes son mis posibles beneficiarios?</h4>
+        <div class="fqs_info">
+          <p>
+            Para conocer esta información, selecciona la opción de
+            “Certificados” que se encuentra en el menú principal y haz clic en
+            “Copia de Póliza, al generar el documento podrás visualizar tus
+            posibles beneficiarios.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
+        <h4>¿Cómo puedo agregar o eliminar un beneficiario?</h4>
+        <div class="fqs_info">
+          <p>
+            En la parte superior de la pantalla, en el menú principal,
+            selecciona “Solicitudes” y luego haz clic en “Crear una solicitud” y
+            diligencia los campos solicitados. Puedes adjuntar documentos en
+            caso de ser necesario y no olvides autorizar el tratamiento de datos
+            personales.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="fqs_list">
+      <div class="fqs_list_int">
         <h4>
-          ¿Quién hace el pago de mi EPS mientras recibo mi mesada pensional?
+          No encuentro una información en la página web, ¿cómo puedo buscarla?
         </h4>
         <div class="fqs_info">
           <p>
-            ASULADO Seguros de Vida como aseguradora hace el descuento de tu
-            mesada pensional para el pago de Seguridad Social, según lo
-            dispuesto en la Ley 100 de 1993. Este descuento se hace de la
-            siguiente manera:
-          </p>
-          <table class="table-auto">
-            <thead>
-              <tr>
-                <th>
-                   Mesada pensional en Salarios Mínimos Legales Mensuales
-                  Vigentes (SMLMV)
-                </th>
-                <th>Cotización mensual en salud </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1 SMLMV</td>
-                <td>4%</td>
-              </tr>
-              <tr>
-                <td>&gt;1 SMLMV y hasta 2 SMLMV</td>
-                <td>10%</td>
-              </tr>
-              <tr>
-                <td>&gt;2 SMLMV y hasta 5 SMLMV</td>
-                <td>12%</td>
-              </tr>
-              <tr>
-                <td>&gt;5 SMLMV y hasta 8 SMLMV</td>
-                <td>12%</td>
-              </tr>
-              <tr>
-                <td>&gt;8 SMLMV</td>
-                <td>12%</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Cómo me puedo trasladar de EPS?</h4>
-        <div class="fqs_info">
-          <p>
-            Debes acercarte a la entidad promotora de salud (EPS) a la que
-            quieres trasladarte y una vez sea aprobada tu afiliación debes
-            informarnos y compartirnos este certificado.
-          </p>
-          <p>
-            Recuerda la importancia de mantener tus datos actualizados, puedes
-            hacerlo a través de la sección Solicitudes o comunicándote a
-            nuestras líneas de atención a nivel nacional 018000 412 854 y en
-            Medellín al (604) 4026876.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>Si vivo en el exterior, ¿me descontarán el pago de la EPS?</h4>
-        <div class="fqs_info">
-          <p>
-            No se procederá con el descuento de dicha cotización cuando el
-            pensionado viva en el exterior. Para lo anterior, se deberá reportar
-            la situación ante ASULADO Seguros de Vida, compartiendo el soporte
-            de la declaración juramentada y de esta manera, suspender la
-            cotización al Sistema de Seguridad Social en Salud en Colombia.
-          </p>
-          <p>
-            Al no informar esta novedad, subsiste la obligación de realizar la
-            cotización al Sistema de Salud por parte de la entidad pagadora, en
-            este caso ASULADO Seguros de Vida.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="fqs_list">
-      <div class="fqs_list_int">
-        <h4>¿Puedo afiliarme a una caja de compensación estando pensionado?</h4>
-        <div class="fqs_info">
-          <p>
-            Sí, debes acercarte a la caja de compensación familiar, una vez
-            tengas el certificado de afiliación deberá ser aportado a ASULADO
-            Seguros de Vida. Esta afiliación es totalmente voluntaria.
-          </p>
-          <p>
-            Por estar afiliado a una caja de compensación tienes derecho a los
-            siguientes beneficios:
-          </p>
-          <ul>
-            <li>Espacios de lectura</li>
-            <li>Tarifas preferenciales en deporte y recreación</li>
-            <li>Subsidios</li>
-            <li>Obtener créditos</li>
-          </ul>
-          <p>
-            Debes tener en cuenta que puedes escoger con tu caja de compensación
-            el porcentaje de descuento que más se acomoda a tus necesidades:
-            puede ser el 0,6% o el 2%, elígelo según los beneficios que te
-            interesen.
+            En la parte superior derecha de tu pantalla encuentras el ícono de
+            la lupa, allí podrás realizar tus búsquedas por palabras clave, por
+            ejemplo “Certificado”, de esta forma encontrarás los links directos
+            a las distintas opciones según tu necesidad.
           </p>
         </div>
       </div>
