--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -11,7 +11,7 @@
 
         <div class="pl-10 py-6">
           <h3 class="!text-azul-bright !text-2xl text-center">
-            Medellín, 2 de julio de 2024
+            Medellín, 17 de julio de 2024
           </h3>
         </div>
 
@@ -27,6 +27,68 @@
             </div>
           </div>
         </section>
+
+        <div class="bg-alpha-15 w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch">
+          <div class="w-full lg:w-1/3 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat">
+            <div class="w-full lg:ml-36 mr-auto lg:w-2/3 xl:w-2/3">
+              <img
+              class="lg:max-w-full mx-auto max-w-sm !w-full"
+              src="/assets/images/ASAMBLEA-CARTA_img.webp"
+              alt=""
+            />
+            </div>
+          </div>
+  
+            <div class="w-full lg:w-2/3 lg:px-4 px-4 xl:px-32 lg:text-justify py-16  bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat">
+                <div class="">
+                  <h3 class="!text-azul-50 !text-3xl my-10">
+                    Sr. Accionista Asulado Seguros de Vida S.A.<br /> Vía correo electrónico
+                 
+                  </h3>
+                  <p class="!text-azul-50 !text-2xl my-5">
+                    <b>Asunto:</b> Convocatoria a reunión extraordinaria de la Asamblea General de Accionistas. 
+                  </p>
+  
+                   <p class="!text-azul-80 my-5">
+                    <b>Patricia Restrepo Gutiérrez</b>, actuando en mi calidad de presidenta de Asulado Seguros de Vida S.A. (la “<b>Sociedad</b>”), de conformidad con lo dispuesto en el artículo 423 del Código de Comercio y los artículos 19 y siguientes de los Estatutos Sociales de la Sociedad, me permito convocarlo a la reunión extraordinaria de la Asamblea General de Accionistas de la Sociedad, que se celebrará el día <b>19 de julio del presente año, a las 9:00 a.m., en la Cra. 43ª No. 3 - 101 piso 6 de la ciudad de Medellín</b>, en la que se someterá a consideración de la Asamblea el siguiente <b>orden del día:</b> 
+                   </p>
+
+                   <ul class="!text-azul-80 pl-8">
+                    <li><b>1.</b> Verificación de la convocatoria de la reunión.                    </li>
+                    <li><b>2.</b> Verificación del quórum.</li>
+                    <li><b>3.</b> Lectura y aprobación del orden del día.</li>
+                    <li><b>4.</b> Nombramiento del Presidente y del Secretario de la reunión.</li>
+                    <li><b>5.</b> Reconocimiento de ineficacia de la reunión extraordinaria de la Asamblea General de Accionistas del 14 de junio de 2024. </li>
+                    <li><b>6.</b> Autorización de capitalización de la Sociedad.</li>
+                    <li><b>7.</b> Información sobre la elaboración y aprobación del reglamento de emisión y suscripción de acciones a cargo de la Junta Directiva de la Sociedad.</li>
+                    <li><b>8.</b> Lectura y aprobación del acta. </li>
+                    <li><b>9.</b> Levantamiento de la sesión. </li>
+                  </ul>
+
+                  <p class="!text-azul-80 my-5">
+                    Se informa que quienes no puedan asistir personalmente pueden hacerse representar por medio de apoderado, de conformidad con lo establecido en la Ley y en los Estatutos Sociales
+                    </p>
+
+                    <p style="display: flow-root;"><img src="/assets/images/firma_patricia.jpg" alt="" style="mix-blend-mode: darken;display: block;width: 82px;height: 53px;"></p>
+              <h3 class="!text-azul-80 mt-5">Patricia Restrepo Gutiérrez</h3>
+              <p class="!text-azul-80">
+                Presidenta Asulado Seguros de Vida S.A
+              </p>
+  
+                </div>
+            </div>
+          </div>
+
+
+
+        <div class="divider"></div>
+
+
+        <div class="pl-10 py-6">
+          <h3 class="!text-azul-bright !text-2xl text-center">
+            Medellín, 2 de julio de 2024
+          </h3>
+        </div>
 
         <div class="bg-alpha-15 w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch">
         <div class="w-full lg:w-1/3 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat">
@@ -188,7 +250,7 @@
 
         
 
-      <!-- <div
+       <div
         class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch"
       >
         <div
@@ -310,14 +372,14 @@ Así mismo, los accionistas participes podrán ofertar un número mayor a la pro
           </p>
         </div>
           </div>
-        </div>-->
+        </div>
 
       </div>
 
       <div class="divider"></div>
 
 
-      <!-- <div class="pl-10 py-6">
+       <div class="pl-10 py-6">
           <h3 class="!text-azul-bright !text-3xl">
             Medellín, 6 de junio de 2024
           </h3>
@@ -397,12 +459,12 @@ Así mismo, los accionistas participes podrán ofertar un número mayor a la pro
         </div>
 
 
-        <div class="divider"></div>-->
+        <div class="divider"></div>
 
 
 
 
-      <!--  <div class="pl-10 py-6">
+       <div class="pl-10 py-6">
           <h3 class="!text-azul-bright !text-3xl">
             Medellín, 22 de mayo de 2024
           </h3>
@@ -610,7 +672,7 @@ Así mismo, los accionistas participes podrán ofertar un número mayor a la pro
               </p>
             </div>
           </div>
-        </div>-->
+        </div>
 
 
       
@@ -619,7 +681,7 @@ Así mismo, los accionistas participes podrán ofertar un número mayor a la pro
 
        
 
-       <!-- <div
+        <div
           class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row-reverse md:justify-between md:items-stretch"
         >
           <div
@@ -721,7 +783,7 @@ Así mismo, los accionistas participes podrán ofertar un número mayor a la pro
               </p>
             </div>
           </div>
-        </div>-->
+        </div>
       </div>
     </div>
   </section>
