Update footer link to GLC-PO06 Reglamento del Comite de etica y Cumplimiento

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -240,7 +240,7 @@
         </li>
         <li>
           <a
-            href="/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf"
+            href="/assets/documentos/GLC-PO06 Reglamento del Comite de etica y Cumplimiento"
             target="_blank"
             class="dest"
             aria-current="page"
