--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -240,7 +240,7 @@
         </li>
         <li>
           <a
-            href="/assets/documentos/GLC-PO06 Reglamento del Comite de etica y Cumplimiento"
+            href="/assets/documentos/GLC-PO06 Reglamento del Comite de etica y Cumplimiento.pdf"
             target="_blank"
             class="dest"
             aria-current="page"
@@ -270,7 +270,7 @@
         </li>
         <li>
           <a
-            href="https://www.superfinanciera.gov.co/jsp/"
+            href="https://www.superfinanciera.gov.co/"
             target="_blank"
             class="dest"
             aria-current="page"
