--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -59,11 +59,14 @@
       @apply w-full;
       tbody:has(tr + tr + tr) {
         &:has(iframe) {
-          @apply flex flex-wrap;
+          @apply flex flex-wrap md:flex-row flex-col;
           tr {
-            @apply flex !w-1/2;
+            @apply flex w-full md:w-1/2 md:flex-row flex-col;
             td {
               @apply w-full flex flex-col;
+              input {
+                @apply w-full md:w-auto;
+              }
             }
           }
           tr:first-child {
